Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-122184

[Crash] The 'Widgets camera' app crashes on Android when starting and stopping the video recording

XMLWordPrintable

    • Android
    • 653d196a1 (dev), f56950898 (6.7), 00f882e58 (6.6), e8420d7ab (tqtc/lts-6.5)
    • 2024wk10FOQtforAndroid, 2024wk12FOQtforAndroid

      MacOS 14.3

      Qt Creator 12.0.1

      Qt 6.7.0-beta2

      Device: Samsung Galaxy S22 / A13.0

      Steps to reproduce:

      1. Run example app on Android device - https://doc.qt.io/qt-6/qtmultimedia-camera-example.html
      2. Go to File > Change settings and select very high resolution (for me it was YUV420P 3840x2160 30FPS), but it happens with a format bigger than 1920x1080.
      3. Start recording the video, pause the video, then stop it.
      4. Repeat step 3 several times if it doesn't crash immediately

      Expected: The video recording is started and is stopped. No crash.

      Actual: The app crashes.

      Reproducibility:  100% 

       

       

      02-12 15:25:44.537 21489 21525 F libc    : Fatal signal 11 (SIGSEGV), code 1 (SEGV_MAPERR), fault addr 0x68 in tid 21525 (qtMainLoopThrea), pid 21489 (.example.camera)
      02-12 15:25:45.211 22809 22809 F DEBUG   : *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***
      02-12 15:25:45.211 22809 22809 F DEBUG   : Build fingerprint: 'samsung/r0sxeea/r0s:13/TP1A.220624.014/S901BXXU2BVKB:user/release-keys'
      02-12 15:25:45.211 22809 22809 F DEBUG   : Revision: '28'
      02-12 15:25:45.211 22809 22809 F DEBUG   : ABI: 'arm64'
      02-12 15:25:45.211 22809 22809 F DEBUG   : Processor: '4'
      02-12 15:25:45.211 22809 22809 F DEBUG   : Timestamp: 2024-02-12 15:25:44.654845585+0100
      02-12 15:25:45.211 22809 22809 F DEBUG   : Process uptime: 80s
      02-12 15:25:45.211 22809 22809 F DEBUG   : Cmdline: org.qtproject.example.camera
      02-12 15:25:45.211 22809 22809 F DEBUG   : pid: 21489, tid: 21525, name: qtMainLoopThrea  >>> org.qtproject.example.camera <<<
      02-12 15:25:45.211 22809 22809 F DEBUG   : uid: 10481
      02-12 15:25:45.211 22809 22809 F DEBUG   : tagged_addr_ctrl: 0000000000000001 (PR_TAGGED_ADDR_ENABLE)
      02-12 15:25:45.211 22809 22809 F DEBUG   : pac_enabled_keys: 000000000000000f (PR_PAC_APIAKEY, PR_PAC_APIBKEY, PR_PAC_APDAKEY, PR_PAC_APDBKEY)
      02-12 15:25:45.211 22809 22809 F DEBUG   : signal 11 (SIGSEGV), code 1 (SEGV_MAPERR), fault addr 0x0000000000000068
      02-12 15:25:45.211 22809 22809 F DEBUG   : Cause: null pointer dereference

       

        1. crash_camera.txt
          17 kB
          Łukasz Kosiorowski
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            bartlomiejmoskal Bartlomiej Moskal
            lkos Łukasz Kosiorowski
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes